# giftpack

./: .gitignore  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_main.py
