[project]
name = "2025-12-15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3,<3.1.0",
    "pulp>=3.3.0",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
